# docker-mcp

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_HEALTH_DUPLICATES_DEAD_CODE.md  DOCKER_MCP_COMPREHENSIVE_TEST_PLAN.md  DOCKER_MCP_TEST_RESULTS.md  Dockerfile  INSTALL_IMPROVEMENTS.md  MIGRATION_TEST_PLAN.md  README.md  SECURITY_IMPLEMENTATION_SUMMARY.md  TEST_PROMPTS.md  TOOLS.md  ZFS_MIGRATION_FIX_PLAN.md  dev.fastmcp.json  docker-compose.yaml  docker-mcp-pr7-fixes.md  docker-mcp-remaining-fixes.md  fastmcp.json  fix_asyncio.py  fix_asyncio_formatting.py  fix_remaining_asyncio.py  fix_remaining_asyncio_final.py  get_gh_unresolved.sh  http.fastmcp.json  install-enhanced.sh  install.sh  install.sh.backup  pr12_ACTUAL_unresolved_reviews.md  pyproject.toml  test_integration.py  test_migration.py  test_subprocess_basic.py  test_subprocess_simple.py  unresolved.md
.github/: copilot-instructions.md
.github/workflows/: code-hygiene.yml  docker-build.yml
.serena/: .gitignore  project.yml
ansible/: README.md  ansible.cfg
ansible/examples/: python_integration.py
ansible/group_vars/: all.yml  production.yml
ansible/inventory/: dynamic_inventory.py
ansible/playbooks/: backup-volumes.yml  docker-cleanup.yml  health-check.yml  host-setup.yml  migrate-stack.yml
ansible/templates/: hosts.yml.j2
config/: CLAUDE.md  containerized-transfer-example.yml  hosts.example.yml
docker_mcp/: __init__.py  constants.py  server.py  server.py.backup  utils.py
docker_mcp/core/: CLAUDE.md  __init__.py  backup.py  cache.py  cache_manager.py  compose_manager.py  config.py  config_loader.py  docker_context.py  error_response.py  exceptions.py  file_watcher.py  filesystem_sync.py  logging_config.py  migration.py  migration_utils.py  safety.py  settings.py  ssh_config_parser.py  ssh_pool.py  subprocess_manager.py
docker_mcp/core/migration/: __init__.py  manager.py  verification.py  volume_parser.py
docker_mcp/core/security/: __init__.py  ssh_command_builder.py  ssh_key_rotation.py  ssh_tunnel_docker.py
docker_mcp/core/transfer/: __init__.py  archive.py  base.py  containerized_rsync.py  rsync.py  zfs.py
docker_mcp/middleware/: CLAUDE.md  __init__.py  error_handling.py  logging.py  middleware.md  rate_limiting.py  timing.py
docker_mcp/models/: CLAUDE.md  __init__.py  container.py  enums.py  host.py  params.py  tool_params.py
docker_mcp/prompts/: CLAUDE.md  __init__.py  deployment.py
docker_mcp/resources/: __init__.py  docker.py  ports.py
docker_mcp/services/: CLAUDE.md  __init__.py  cleanup.py  config.py  container.py  host.py  logs.py  schedule.py  stack.py  stack_service.py
docker_mcp/services/stack/: __init__.py  migration_executor.py  migration_orchestrator.py  network.py  operations.py  risk_assessment.py  validation.py  volume_utils.py
docker_mcp/tools/: CLAUDE.md  __init__.py  containers.py  logs.py  stacks.py
docs/: AUTHENTICATION.md  CONSTANTS.md  FASTMCP_CONFIG.md  GOOGLE_OAUTH.md  GOOGLE_OAUTH_END_TO_END.md  OAUTH_PROXY.md  SECURITY.md  TEST_RESULTS_COMPREHENSIVE.md  UTILS.md  consolidated-action-pattern.md  docker-cache-manager.md  fastmcp-complete-guide.md  fastmcp-parameter-annotations.md  sys_ops.md  token-efficient-formatting.md  tool-token-tracking.md
scripts/: analyze_codebase.py  setup-ssh-keys.sh
tests/: CLAUDE.md  CLEANUP.md  __init__.py  cleanup.py  cleanup_utils.py  conftest.py  test_all_tools_pytest.py  test_config.py  test_core_tools_pytest.py  test_deployment_prompts.py  test_docker_compose_validation.py  test_docker_context.py  test_enhanced_param_validation.py  test_file_watcher.py  test_filesystem_sync.py  test_host_models.py  test_integration_coverage_boost.py  test_integration_mocked.py  test_integration_simplified.py  test_middleware.py  test_migration.py  test_models.py  test_param_validation.py  test_port_enhancements.py  test_prompts.py  test_services_comprehensive.py  test_ssh_config_parser.py  test_ssh_pool.py  test_ssh_security.py  test_stack_operations_pytest.py  test_subprocess_manager.py  test_tools_comprehensive.py
